# skironscrapper

./: .gitignore  CMakeLists.txt  main.cpp
converter/: OutputWriter.cpp  OutputWriter.h
converter/formats/: FormatReaderAdapter.cpp  FormatReaderAdapter.h  Grib1FormatReaderAdapter.cpp  Grib1FormatReaderAdapter.h
libbmp/: CMakeLists.txt  bitmap_context.cpp  unique_id_class.cpp
libgrib1/: CMakeLists.txt  grib1_unpack.c  grib1_unpack.h
libwgf3/: CMakeLists.txt  wgf3.cpp  wgf3.h
scripts/: README.txt  skironscrapper.php
